syntax="proto3";

package uploader.service;

option go_package= "uploaderpb";

service Uploader {
  rpc UploadProfile(UploadProfileRequest) returns (UploadProfileResponse);
  rpc UploadBanner(UploadBannerRequest) returns (UploadBannerResponse);
  rpc DeleteProfile(DeleteProfileRequest) returns (DeleteProfileResponse);
  rpc DeleteBanner(DeleteBannerRequest) returns (DeleteBannerResponse);
}

message Empty{}

message UploadProfileRequest{
    string Base64 = 1;
    string UploaderID = 2;
}

message UploadProfileResponse{
    string URL = 1;
}

message UploadBannerRequest{
    string Base64 = 1;
    string UploaderID = 2;
}

message UploadBannerResponse{
    string URL = 1;
}

message DeleteProfileRequest{
    string UploaderID = 1;
}

message DeleteProfileResponse {}

message DeleteBannerRequest{
    string UploaderID = 1;
}

message DeleteBannerResponse {}

